# energy-magazine

./: .env  .gitignore  Makefile  README.md  Readme.md  WIKI.md  docker-compose.yml  pyproject.toml
dags/: bess_telemetry_ingestion.py  market_weather.py  raw_to_bronze_trigger.py  raw_to_trigger.py
docker/: Dockerfile.airflow  Dockerfile.streamlit
src/airflow/: bess_etl_pipeline.py  raw_to_bronze_etl.py  raw_to_etl.py
src/analytics/: business_logic.py  market_analytics.py  physics_analytics.py  weather_analytics.py  weather_logic.py
src/api/: market_client.py  weather_client.py
src/generators/: bess_telemetry_generators.py  raw_generators.py
src/streamlit/: app.py  data_loader.py  physics_analytics.py  ui_components.py
src/streamlit/components/: analytics_charts.py  base_chart.py  battery_charts.py  system_charts.py
src/streamlit/tabs/: tab_business.py  tab_monitoring.py  tab_physics.py  tab_weather.py
tests/: conftest.py
tests/integration/: test_infrastructure.py  test_storage.py
tests/system/: test_airflow_dag_logic.py  test_streamlit_ui.py  test_system.py
tests/unit/: test_analytics.py  test_dashboard_tabs.py  test_generators.py
