[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bess-analytics"
version = "0.1.0"
dependencies = [
    "apache-airflow>=3.2.0",
    "apache-airflow-providers-apache-spark",
    "pyspark>=3.5.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.0.0",
    "docker>=7.0.0",
    "psycopg2-binary",
    "asyncpg",
    "pyarrow",
    "entsoe-py"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pandas-stubs", 
    "pytest>=8.0.0",
    "requests>=2.31.0",
      "entsoe-py"
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [
    "tests",      # Exclude test directory from linting
    "logs",       # Exclude log files
    "data",       # Exclude data directory
    ".venv",      # Exclude virtual environment
    "__pycache__" # Exclude Python cache
]

[tool.ruff.lint]
# Core rule groups (E/W: Flake8, F: Pyflakes, I: Isort, B: Bugbear, C90: Mccabe complexity)
select = ["E", "W", "F", "I", "B", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false 
check_untyped_defs = true   
ignore_missing_imports = true  

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["dags*", "logs*", "data*"]