[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bess-analytics"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.0.0",
    "docker>=7.0.0",
    "psycopg2-binary",
    "asyncpg",
    "pyarrow",
    "entsoe-py"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pandas-stubs",
    "requests>=2.31.0",
    "entsoe-py"
]
test = [
    "pytest>=8.0.0",
    "apache-airflow>=2.8.0"
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "tests",      
    "logs",       
    "data",       
    ".venv",      
    "__pycache__" 
]

[tool.ruff.lint]